# hexly

./: .gitignore  Cargo.toml  LICENSE  README.md  meson.build  meson_options.txt
data/: dev.clozer.Hexly.gschema.xml.in  hexly.desktop.in  hexly.gresource.xml  meson.build  resources.gresource.xml
data/ui/: card_contents_panel.blp  card_information.blp  hexly_card_information.blp  hexly_card_session.blp  hexly_reader_selector.blp  hexly_window.blp  main_window.blp  meson.build  reader_selector.blp  style.css
data/ui/settings/: page_card_authentication.blp  pill.blp  shell.blp
hooks/: pre-commit.hook
src/: app.rs  config.rs.in  main.rs  meson.build  settings.rs
src/core/: mod.rs
src/core/nfc/: messages.rs  mod.rs  types.rs  worker.rs
src/core/nfc/pcsc/: mod.rs  service.rs  types.rs
src/core/pcsc/: error.rs  mod.rs  service.rs  types.rs  utils.rs  worker.rs
src/core/state/: mod.rs  types.rs
src/ui/: formatters.rs  mod.rs  window.rs
src/ui/widgets/: card_information.rs  card_session.rs  mod.rs  reader_selector.rs
src/ui/widgets/card_contents_panel/: builders.rs  mod.rs
src/ui/widgets/card_information/: mod.rs
src/ui/widgets/reader_selector/: mod.rs
src/ui/windows/: common.rs  mod.rs
src/ui/windows/settings/: mod.rs  pill.rs  shell.rs
src/ui/windows/settings/pages/: authentication.rs  mod.rs
src/utils/: format.rs
